--- a/renovate.json5
+++ b/renovate.json5
@@ -1,6 +1,12 @@
 {
     $schema: 'https://docs.renovatebot.com/renovate-schema.json',
     extends: ['config:base'],
-    ignoreDeps: [],
-    packageRules: [],
+    packageRules: [
+        {
+            groupName: 'Node.js',
+            matchPackageNames: ['node'],
+            matchPackagePatterns: ['/node$'],
+            excludePackageNames: ['calico/node', 'kindest/node', '@sentry/node'],
+        },    
+    ],
 }
